# FareCraft

./: .dockerignore  .gitignore  Dockerfile  README.md  comparison_results.json  output.json  pyproject.toml  requirements.txt  start.sh  test_all_three_approaches.py  test_comprehensive.py  test_results.md
benchmarking/: output.json  test_50_runs.py  test_report.txt  test_results.json
experiments/: README.md  test_all_three_approaches.py  test_comprehensive.py
src/api/: __init__.py  database.py  index.html  main.py  mcp_server.py  models.py
src/scraper/: __init__.py  scraper.py  scraper_sequential.py  scraper_staggered.py
