[project]
name = "farecraft"
version = "1.0.0"
description = "FareCraft - American Airlines award flight optimizer with Akamai bypass"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.121.0",
    "uvicorn==0.38.0",
    "pydantic==2.12.4",
    "camoufox==0.4.11",
    "curl-cffi==0.13.0",
    "loguru==0.7.3",
    "tenacity==9.1.2",
    "fastmcp>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api", "src/scraper"]

[tool.uv]
dev-dependencies = []

[project.optional-dependencies]
dev = []
